--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>{{ page.title }}</title>
+    <link rel="stylesheet" href="{{ "/_includes/styles.css" | relative_url }}">
   </head>
   <body>
     {% include navigation.html %}
