--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,19 +1,9 @@
-<!doctype html>
-<html>
-  <head>
-    
-    <meta charset="utf-8">
-    <title>{{ page.title }}</title>
-    
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap" rel="stylesheet">
-    
-    <link rel="stylesheet" href="{{ "/assets/styles.css" | relative_url }}">
-  
-  </head>
-  <body>
-    {% include navigation.html %}
-    {{ content }}
-  </body>
-</html>
+
+{% if page.title %}{{ page.title }} - {{ site.title }}{% else %}{{ site.title }}{% endif %}
+
+{% seo %}
+
+Emran
+{% include navigation.html %}
+ 
+{{ content }}
