--- a/_layouts/default copy.html
+++ b/_layouts/default copy.html
@@ -10,7 +10,7 @@
   <div class="container">
     <aside class="sidebar">
       <h1><a href="{{ '/' | relative_url }}">{{ site.title }}</a></h1>
-      <!-- <nav class="main-nav">
+      <nav class="main-nav">
         <ul>
           <li>
             <div class="icon-container">
@@ -21,7 +21,7 @@
           <li><a href="{{ '/publications' | relative_url }}">Publications</a></li>
           <li><a href="{{ '/cv' | relative_url }}">CV</a></li>
         </ul>
-      </nav> -->
+      </nav>
     </aside>
 
     <main class="content">
@@ -30,8 +30,8 @@
 
     <footer>
       <div class="footer-links">
-        <!-- <a href="{{ '/cv' | relative_url }}">CV</a>
-        <a href="https://scholar.google.com">GS</a> -->
+        <a href="{{ '/cv' | relative_url }}">CV</a>
+        <a href="https://scholar.google.com">GS</a>
       </div>
     </footer>
   </div>
