--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -8,21 +8,27 @@
 </head>
 <body>
   <div class="container">
-    <aside class="sidebar">
-      <h1><a href="{{ '/' | relative_url }}">{{ site.title }}</a></h1>
-      <!-- <nav class="main-nav">
+    <header class="navbar">
+      <h1><a href="{{ '/' | relative_url }}">
+        <img src="{{ '/assets/icons/bench.svg' | relative_url }}" alt="Projects icon" class="icon icon-xl">
+        <!-- {{ site.title }} -->
+      </a></h1>
+      
+      <nav class="main-nav">
         <ul>
           <li>
             <div class="icon-container">
-              <img src="{{ '/assets/icons/projects.svg' | relative_url }}" alt="Projects icon" class="icon">
-              <a href="{{ '/projects' | relative_url }}">Projects</a>
+              <!-- <a href="{{ '/projects' | relative_url }}"> -->
+                <!-- Projects -->
+                <img src="{{ '/assets/icons/bush.svg' | relative_url }}" alt="Projects icon" class="icon icon-xl">
+              <!-- </a> -->
             </div>
           </li>
-          <li><a href="{{ '/publications' | relative_url }}">Publications</a></li>
-          <li><a href="{{ '/cv' | relative_url }}">CV</a></li>
+          <!-- <li><a href="{{ '/publications' | relative_url }}">Publications</a></li>
+          <li><a href="{{ '/cv' | relative_url }}">CV</a></li> -->
         </ul>
-      </nav> -->
-    </aside>
+      </nav>
+    </header>
 
     <main class="content">
       {{ content }}
