--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -11,9 +11,9 @@
 body {
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif;
   line-height: 1.6;
-  color: #333;
-  background-color: #fff;
-  max-width: 1200px;
+  color: #1d1d1d;
+  background-color: #FFFAFA;
+  // max-width: 1200px;
   margin: 0 auto;
   height: 100vh;
 }
@@ -24,10 +24,10 @@ body {
 .container {
   display: grid;
   // grid-template-columns: .6fr 3.4fr;
-  grid-template-rows: 1fr auto;
+  grid-template-rows: 48px auto 48px;
   grid-gap: 20px;
   margin: 0 auto;
-  max-width: 1200px;
+  // max-width: 1200px;
   width: 100%;
   padding: 40px;
   height: 100vh; /* Set height to 100% of viewport height */
@@ -95,9 +95,14 @@ body {
 /*#endregion*/
 
 /*#region Main Content */
-// .content {
-//   padding: 20px 0;
-// }
+.content {
+  max-width: 1200px; /* Increased from 1600px */
+  // padding: 20px 0; // Enable when using the filter controls
+  margin: 0 auto;
+  display: flex;
+  // align-items: flex-start;
+  align-items: center;
+}
 
 .content h1 {
   font-size: 28px;
@@ -116,7 +121,7 @@ body {
 
 .content img {
   max-width: 100%;
-  border-radius: 10px;
+  border-radius: 8px;
 }
 
 .content ul {
@@ -137,22 +142,81 @@ body {
   text-decoration: underline;
 }
 
-.hello-text {
-  font-size: 36px !important;
+/* Ensure the content gallery uses the full available width */
+.content-gallery {
+  width: 100%;
 }
+
+.content-projects{
+  margin: 0px;
+  max-width: 100%;
+  align-items: flex-start;
+}
+
+// make all text in hello-text not selectable except allow links to be selectable
+
+.hello-text {
+  user-select: none;
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+}
+
+/* Allow links to be selectable */
+.hello-text a {
+  user-select: text;
+  -webkit-user-select: text;
+  -moz-user-select: text;
+  -ms-user-select: text;
+  cursor: pointer;
+}
+
+.hello-text {
+  font-size:48px !important;
+  // text-align: justify;
+  // text-justify: inter-word;
+
+  .emoji {
+    font-size: 48px;
+  }
+
+  // if smaller screen
+  @media (max-width: 768px) {
+    font-size: 24px !important;
+
+    .emoji {
+      font-size: 24px;
+    }
+  }
+}
+
+.powered-by-text{
+  font-size: 12px;
+  color: #333;
+  // Disable text selection
+  user-select: none;
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  
+}
+
 /*#endregion*/
 
 /*#region Footer */
 footer {
-  grid-column: 1 / -1;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 12px 0 0 0;
   border-top: 1px solid #eee;
-  padding-top: 20px;
-  margin-top: 20px;
 }
+
 
 .footer-links {
   display: flex;
-  gap: 20px;
+  gap: 16px;
+  margin-right: 20px;
 }
 
 .footer-links a {
@@ -204,16 +268,38 @@ footer {
   margin-right: 4px;
   vertical-align: -2px;
 }
+
+mark{
+  background-color: #ffce1b;
+  color: #000;
+}
+
+.tag-overlay {
+  position: absolute;
+  top: 10px;
+  left: 10px;
+  z-index: 10;
+}
+
+.project-type-tag {
+  background-color: rgba(0, 0, 0, 0.7);
+  color: white;
+  padding: 2px 4px;
+  border-radius: 4px;
+  font-size: 0.8em;
+  font-weight: bold;
+}
+
 /*#endregion*/
 
 /*#region Tags */
-.tag {
+.tag, .projtype-tag {
   display: inline-flex;
   align-items: center;
   padding: 4px 8px;
   font-size: 12px;
   border-radius: 4px;
-  background-color: #f0f0f0;
+  background-color: #f4f4f4;
   color: #666;
   transition: background-color 0.2s;
 }
@@ -251,9 +337,9 @@ footer {
 /* Projects Grid Layout */
 .projects-grid {
   display: grid;
-  grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
+  grid-template-columns: repeat(auto-fill, minmax(320px, 1fr));
   gap: 24px;
-  margin-top: 32px;
+  // margin-top: 24px; //Enable when using the filter controls
 }
 
 .project-card-link {
@@ -264,38 +350,49 @@ footer {
 .project-card {
   display: flex;
   flex-direction: column;
-  border-radius: 10px;
+  border-radius: 8px;
   overflow: hidden;
-  transition: transform 0.3s ease, box-shadow 0.3s ease;
-  background-color: #fff;
-  box-shadow: 0 2px 8px rgba(0, 0, 0, 0.05);
-  border: 1px solid #f0f0f0;
+  max-height: 320px;
+  // transition: transform 0.3s ease, box-shadow 0.3s ease;
+  // background-color: #fff;
+  // box-shadow: 0 2px 8px rgba(0, 0, 0, 0.05);
+  // border: 1px solid #f0f0f0;
 }
 
-.project-card:hover {
-  transform: translateY(-4px);
-  box-shadow: 0 10px 20px rgba(0, 0, 0, 0.1);
-}
+// .project-card:hover {
+//   transform: translateY(-4px);
+//   box-shadow: 0 8px 20px rgba(0, 0, 0, 0.1);
+// }
 
 .project-image {
   width: 100%;
   height: 200px;
   background-color: #e0e0e0; /* Light gray placeholder */
-  border-radius: 10px;
+  border-radius: 8px;
+  position: relative;
 }
+
 
 .project-tags {
   display: flex;
   gap: 8px;
   margin: 16px 0 4px 0;
-  padding: 0 10px;
+  padding: 0 8px;
 }
 
 .project-title {
   font-size: 16px;
   font-weight: 600;
-  margin: 4px 0 16px 0;
-  padding: 0 10px;
+  // margin: 4px 0 16px 0;
+  padding: 0 8px;
+  line-height: 1.4;
+}
+
+.project-subtitle {
+  font-size: 14px !important;
+  color: #555;
+  margin: 0 0 8px 0;
+  padding: 0 8px;
   line-height: 1.4;
 }
 
@@ -303,21 +400,22 @@ footer {
   font-size: 12px;
   color: #777;
   margin-top: 4px;
-  padding: 0 10px 10px;
+  padding: 0 8px 8px;
 }
 
 /* Filter Controls */
 .filter-controls {
   display: flex;
-  gap: 10px;
+  gap: 8px;
   margin-bottom: 24px;
   flex-wrap: wrap;
 }
 
 .filter-btn {
   padding: 8px 16px;
-  background-color: #f5f5f5;
-  border: 1px solid #ddd;
+  background-color: #dad7d7;
+  // border: 1px solid #ddd;
+  border: none;
   border-radius: 4px;
   font-size: 14px;
   cursor: pointer;
@@ -351,7 +449,7 @@ footer {
   gap: 16px;
   max-height: 300px;
   overflow-y: auto;
-  padding-right: 10px;
+  padding-right: 8px;
   
   &::-webkit-scrollbar {
     width: 8px;
@@ -438,7 +536,7 @@ footer {
   display: flex;
   flex-direction: column;
   gap: 8px;
-  margin-top: 32px;
+  margin-top: 24px;
 }
 
 .pub-item {
@@ -479,7 +577,7 @@ footer {
 .pub-title {
   font-size: 20px;
   font-weight: 600;
-  margin: 0 0 10px 0;
+  margin: 0 0 8px 0;
   line-height: 1.3;
 }
 
@@ -516,7 +614,7 @@ footer {
   background-color: #fff;
   border-radius: 8px;
   overflow: hidden;
-  box-shadow: 0 2px 10px rgba(0, 0, 0, 0.08);
+  box-shadow: 0 2px 8px rgba(0, 0, 0, 0.08);
   transition: transform 0.3s ease, box-shadow 0.3s ease;
   height: 100%;
 }
@@ -543,7 +641,7 @@ footer {
   gap: 16px;
   max-height: 400px;
   overflow-y: auto;
-  padding-right: 10px;
+  padding-right: 8px;
   
   &::-webkit-scrollbar {
     width: 8px;
@@ -628,7 +726,7 @@ footer {
 /* Compact Link */
 .compact-link {
   display: inline-block;
-  margin-top: 10px;
+  margin-top: 8px;
   font-size: 14px;
   color: #0078ff;
   text-decoration: none;
@@ -657,7 +755,7 @@ footer {
 @media (max-width: 600px) {
   .pub-compact-item {
     flex-direction: column;
-    gap: 10px;
+    gap: 8px;
   }
   
   .pub-compact-image {
