--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -36,7 +36,7 @@
 
     <footer>
       <div class="footer-links">
-        <a href="https://scholar.google.com">
+        <a href="https://scholar.google.com/citations?user=wYcrORkAAAAJ&hl=en">
           <img src="{{ '/assets/icons/scholar.svg' | relative_url }}" alt="Google Scholar icon" class="icon icon-lg">
         </a>
       </div>
