--- a/_includes/publications-mobile.html
+++ b/_includes/publications-mobile.html
@@ -7,15 +7,18 @@
             <p style="font-size: 0.75rem; color: #aaa; margin: 0; font-weight: 500;">{% if year_group.name.size == 4 %}{{ year_group.name | slice: -2, 2 }}{% else %}{{ year_group.name }}{% endif %}</p>
             <div style="border: 1px solid #e5e7eb; border-radius: 0.75rem; padding: 0.25rem;">
                 <div style="display: flex; flex-direction: row; gap: 2vw; margin: 0;">
-                    <div style="display: flex; flex-direction: column; flex-wrap: wrap; gap: 2vw; max-height: 26vw; width: 100%;">
+                    <div style="display: flex; flex-direction: column; flex-wrap: wrap; gap: 2vw; max-height: 32vw; width: 100%;">
                     {% for pub in year_group.items %}
-                    <div style="min-width: max-content; height: 12vw; background-color: #f3f4f6; border-radius: 0.5rem; padding: 0.5rem; text-align: center; margin: 0; display: flex; align-items: center; justify-content: flex-start; position: relative;">
+                    <div style="min-width: max-content; height: 15vw; background-color: #f3f4f6; border-radius: 0.5rem; padding: 0.5rem; text-align: center; margin: 0; display: flex; align-items: center; justify-content: flex-start; position: relative;">
                         <span style="position: absolute; bottom: 0.25rem; right: 0.25rem; font-size: 0.75rem;">
                             {% if pub.is-collab %}👥{% endif %}
                         </span>
-                        <a href="{{ '/publications/' | append: pub.title | slugify | relative_url }}" style="text-decoration: none; display: flex; align-items: center; gap: 0.5rem; width: 100%; height: 100%;">
+                        <a href="{{ '/publications/' | append: pub.title | slugify | relative_url }}" style="text-decoration: none; display: flex; align-items: center; gap: 0.75rem; width: 100%; height: 100%;">
                             <span style="font-size: calc(6vw);">📄</span>
-                            {% if pub.venue_short %}<span style="font-size: 0.75rem; color: #aaa; white-space: nowrap;">{{ pub.venue_short }}</span>{% endif %}
+                            <div style="display: flex; flex-direction: column; align-items: flex-start; gap: 0.125rem; min-width: 0;">
+                                <span style="font-size: 0.75rem; color: #666; white-space: nowrap; overflow: hidden; text-overflow: ellipsis; max-width: 30vw;">{{ pub.title }}</span>
+                                {% if pub.venue_short %}<span style="font-size: 0.625rem; color: #aaa; white-space: nowrap;">{{ pub.venue_short }}</span>{% endif %}
+                            </div>
                         </a>
                     </div>
                     {% endfor %}
