--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -59,7 +59,7 @@
         </a>
         <h1>{{ page.title }}</h1>
       </div>
-      <div class="roles mobile">ux researcher, designer, developer</div>
+      <div class="roles mobile">ux researcher + designer + developer</div>
       <nav class="main-nav">
         <ul>
           <li>
