--- a/_includes/projects-mobile.html
+++ b/_includes/projects-mobile.html
@@ -6,7 +6,7 @@
         <div style="display: flex; flex-direction: column; gap: 0.25rem; min-width: max-content;">
             <p style="font-size: 0.75rem; color: #666; margin: 0; font-weight: 500;">{% if year_group.name.size == 4 %}{{ year_group.name | slice: -2, 2 }}{% else %}{% if year_group.name == "Ongoing" %}Ongoing Projects{% else %}{{ year_group.name }}{% endif %}{% endif %}</p>
             <div style="border: 1px solid #e5e7eb; border-radius: 0.75rem; padding: 0.25rem;">
-                <ul style="list-style: none; padding-left: 0; display: flex; flex-wrap: wrap; gap: 2vw; margin: 0;">
+                <ul style="list-style: none; padding-left: 0; display: flex; flex-wrap: wrap; gap: 2vw; margin: 0; overflow: hidden;">
                     {% for project in year_group.items %}
                     <li style="width: {% if project.is-collab or project.institution %}16vw{% else %}12vw{% endif %}; height: 12vw; background-color: #f3f4f6; border-radius: 0.5rem; padding: 0.5rem; text-align: center; margin: 0; display: flex; align-items: center; justify-content: {% if project.is-collab or project.institution %}flex-start{% else %}center{% endif %}; position: relative;">
                         <span style="position: absolute; top: 0.25rem; right: 0.25rem; ">
